Fix maximum width for readable lines

--- a/nudge-base.import.less
+++ b/nudge-base.import.less
@@ -3,7 +3,7 @@
 
 
 /* UTILITY MIXINS */
-.content { padding: 0 @std*3; }
+.content { max-width: 60em; margin: 0 auto; padding: 0 @std*3; }
 
 .subvoc { font-style: italic; font-size: 0.9em; }
 
